Added Contact section and media queries

--- a/dtd-theme/sass/override/_layouts.scss
+++ b/dtd-theme/sass/override/_layouts.scss
@@ -42,10 +42,10 @@ section {
 	width: 100%;
 	padding: 0;
 	border-bottom: 5px solid $light-purple;
+	
 	p {
 		width: 100%;
 	}
-//	background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAG0lEQVQIW2NkYGD4z8DAwMgABXAGNgGwSgwVAFbmAgXxvZSoAAAAAElFTkSuQmCC) repeat;
 	
 	&.active {
 		position: relative;
@@ -54,9 +54,6 @@ section {
 	}
 	
 	&:nth-of-type(even) {
-//		background: url(data:image/png;base64,iVBORw0KGgoAAAANSUhEUgAAAAQAAAAECAYAAACp8Z5+AAAAHElEQVQIW2NsampKq6urm8UABYwwBoYATCWGCgBUXQgFPkdSeAAAAABJRU5ErkJggg==),
-//			$black;
-		
 		background: $black;
 	}
 	
@@ -94,6 +91,10 @@ section {
 		padding: 30px 80px;
 		float: left;
 		width: 100%;
+		
+		@include breakpoint(tablet) {
+			padding: 30px 30px;
+		}
 	}
 	
 	p {
@@ -108,6 +109,10 @@ section {
 #aboutMe {
 	.content {
 		padding: 30px 120px;
+		
+		@include breakpoint(tablet) {
+			padding: 30px 30px;
+		}
 	}
 	
 	.long-summary {
@@ -121,6 +126,10 @@ section {
 			padding: 0 5px;
 			background: $black;
 			color: $light-purple;
+		}
+		
+		@include breakpoint(tablet) {
+			width: 100%;
 		}
 	}
 	
@@ -173,6 +182,11 @@ section {
 		position: relative;
 		float: left;
 		
+		@include breakpoint(tablet) {
+			width: 80%;
+			margin: 20px 10%;
+		}
+		
 		img {
 			position: absolute;
 			top: 20px;
@@ -184,6 +198,13 @@ section {
 			-webkit-box-shadow: 5px 7px 5px 0px rgba(0,0,0,0.5);
 			-moz-box-shadow: 5px 7px 5px 0px rgba(0,0,0,0.5);
 			box-shadow: 5px 7px 5px 0px rgba(0,0,0,0.5);
+			
+			@include breakpoint(tablet) {
+				position: relative;
+				float: left;
+				width: 100%;
+				transform: translateX(-50%) rotate(0);
+			}
 		}
 	}
 	
@@ -200,6 +221,48 @@ section {
 	ul.testimonials {
 		float: left;
 		position: relative;
+		width: 100%;
+		margin-left: 0;
+		padding-left: 0;
+		list-style-type: none;
+		
+		li {
+			float: left;
+			width: 50%;
+			padding: 20px 50px;
+			
+			p, h4, h5 {
+				display: block;
+				margin: 0;
+			}
+			
+			p {
+				font-size: 1.2em;
+				margin-bottom: 0;
+				text-align: left;
+				
+				span {
+					font-size: 1.5em;
+					color: $light-purple;
+				}
+			}
+			
+			h4 {
+				font-size: 1em;
+				text-align: right;
+				color: $light-purple;
+				
+				span {
+					color: $beige;
+				}
+			}
+			
+			h5 {
+				text-transform: uppercase;
+				text-align: right;
+				color: $beige;
+			}
+		}
 	}
 	
 	.testimonial-summary {
@@ -222,5 +285,126 @@ section {
 #skills {
 	.content {
 		padding: 30px 0;
+	}
+}
+
+#contact {
+	
+	form {
+		float: left;
+		width: 50%;
+		padding-right: 50px;
+		
+		@include breakpoint(tablet) {
+			width: 100%;
+			margin: 10px 0;
+			padding-right: 0;
+		}
+	}
+	
+	label {
+		float: left;
+		position: relative;
+		display: block;
+		width: inherit;
+		padding: 5px 7px;
+		margin-left: -20px;
+		background-color: $purple;
+		color: $beige;
+		
+		span {
+			display: none;
+			color: red;
+		}
+		
+		&::after {
+			width: 100%;
+			height: 2px;
+			background-color: $purple;
+			content: "";
+			position: absolute;
+			bottom: 0;
+		}
+	}
+	
+	input, textarea {
+		border-radius: 0;
+		text-align: left;
+		background-color: rgba(240,240,240,0.1);
+		border: 0;
+		border-bottom: 2px solid $light-purple;
+		color: white;
+		margin-bottom: 20px;
+	}
+	
+	input {
+		width: 100%;
+	}
+	
+	input[type="submit"] {
+		margin-top: 0;
+		width: 150px;
+		box-shadow: none;
+		padding: 10px 10px;
+		font-size: 1em;
+		
+		&:hover {
+			background-color: $purple;
+			color: $beige;
+		}
+	}
+	
+	textarea {
+		height: 64px;
+		width: 100%;
+	}
+	
+	.social-media {
+		float: left;
+		position: relative;
+		width: 50%;
+		padding-left: 50px;
+		text-align: center;
+		
+		@include breakpoint(tablet) {
+			width: 100%;
+			padding-left: 0;
+			height: 200px;
+		}
+		
+		p {
+			margin-bottom: 0;
+			font-size: 1.1em;
+		}
+		
+		a {
+			padding: 0 20px;
+			
+			&.github {
+				color: white;
+			}
+			
+			&.linkedin {
+				color: #1985BC;
+			}
+			
+			&.facebook {
+				color: #3B5998;
+			}
+			
+			&:hover {
+				color: $light-purple;
+			}
+		}
+		
+		a.resume {
+			width: 300px;
+			position: absolute;
+			color: white;
+			text-decoration: none;
+			background-color: $purple;
+			margin-left: -150px;
+			margin-top: 20px;
+		}
 	}
 }
